New Views, Calendar, Graph, Pivot

--- a/covid_19/views/views.xml
+++ b/covid_19/views/views.xml
@@ -39,12 +39,50 @@
         </field>
     </record>
 
+       <!-- explicit calendar view definition -->
+      <record id="view_covid_covid_19_calendar" model="ir.ui.view">
+          <field name="name">covid_19_calendar</field>
+          <field name="model">covid.covid_19</field>
+          <field name="arch" type="xml">
+              <calendar string="Covid 19" date_start="date">
+                  <field name="country_id"/>
+                  <field name="infected"/>
+              </calendar>
+          </field>
+      </record>
+
+       <!-- explicit graph view definition -->
+      <record id="view_covid_covid_19_graph" model="ir.ui.view">
+          <field name="name">covid_19_graph</field>
+          <field name="model">covid.covid_19</field>
+          <field name="arch" type="xml">
+              <graph string="Covid 19">
+                  <field name="country_id"/>
+                  <field name="infected" type="measure"/>
+              </graph>
+          </field>
+      </record>
+
+       <!-- explicit pivot view definition -->
+      <record id="view_covid_covid_19_pivot" model="ir.ui.view">
+          <field name="name">covid_19_pivot</field>
+          <field name="model">covid.covid_19</field>
+          <field name="arch" type="xml">
+              <pivot string="Covid 19">
+                  <field name="date" type="row"/>
+                  <field name="country_id" type="row"/>
+                  <field name="infected" type="measure"/>
+                  <field name="recovered" type="measure"/>
+                  <field name="deceased" type="measure"/>
+              </pivot>
+          </field>
+      </record>
 
     <!-- actions opening views on models -->
     <record model="ir.actions.act_window" id="covid_19_action">
       <field name="name">Registros</field>
       <field name="res_model">covid.covid_19</field>
-      <field name="view_mode">tree,form</field>
+      <field name="view_mode">tree,form,calendar,graph,pivot</field>
     </record>
 
     <!-- Top menu item -->
